# jetson

./: CMakeLists.txt  PID.py  Unet.py  backup.py  data.py  detect_line1.py  detect_line3.py  lane_local_core.py  note.txt  package.xml  test_1(复件).py  test_camera.py  traffic_sign_record.py  traffic_sign_replay.py  unet_20230330.pth  utils.py  velpub.py  velpub.py1  velpub2.py  velpub3.py  velpub5.py  velpub_1.py  velpub_backup.py  vth2ros.py  yolo_rule_adapter.py  yolov8_detector.py
config/: mock_traffic_sign_sequence.json  yolov8_detector_profile.json  yolov8_project_profile.json  yolov8_project_profile.template.json  yolov8_rule_map.json
launch/: AIcar_move.launch.py  detect_line.launch.py  get_yolo_rst.launch.py  mock_to_velpub.launch.py  mock_traffic_sign_detector.launch.py  yolo_rule_adapter.launch.py  yolov8_detector.launch.py  yolov8_rule_bridge.launch.py  yolov8_to_velpub.launch.py
scripts/: Test_PID.py  backup1.py  detect.sh  detect_line2.py  lane_local_core.py  mock_traffic_sign_detector.py  validate_yolov8_config.py  velpub.py1  velpub4.py
scripts/params/: last.pth  min_loss_50.pth  min_train_loss_112.pth  unet.pth  unet_0411.pth  unet_0429.pth
