<?xml version="1.0"?>
<package format="3">
  <name>velpub</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble migration for lane keep and velocity bridge scripts.</description>

  <maintainer email="jetson@example.com">codex</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>interfaces</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
